--- a/Finsys/Finsys_App/templates/company/Fin_Debit_Note_Overview.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Debit_Note_Overview.html
@@ -573,10 +573,10 @@
                                                     <p class="mb-0 text-right">{{itm.items.name}}</p>
                                                 </div>
                                                 <div class="col-md-3 mt-3 vl">
-                                                    <h6 class="mb-0">HSN</h6>
+                                                    <h6 class="mb-0">{% if itm.items.item_type == 'Goods' %} HSN {% else %} SAC {% endif %}</h6>
                                                 </div>
                                                 <div class="col-md-3 mt-3">
-                                                    <p class="mb-0 text-right">{{itm.hsn}}</p>
+                                                    <p class="mb-0 text-right">{% if itm.items.item_type == 'Goods' %} {{ itm.hsn }} {% else %} {{ itm.sac }} {% endif %}</p>
                                                 </div>
                                                 <div class="col-md-3 mt-3 ">
                                                     <h6 class="mb-0"> Quantity</h6>
