--- a/Finsys/Finsys_App/templates/company/Fin_Pbill_List.html
+++ b/Finsys/Finsys_App/templates/company/Fin_Pbill_List.html
@@ -40,7 +40,7 @@
                 <a class="dropdown-item" style="height: 40px; font-size: 15px; color: white;cursor: pointer;" onclick="filtertable('Save')">Saved</a>
               </div>
             </div>
-            <a href="{% url 'Fin_List_Purchase_Add' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i>Add Bill</button></a>
+            <a href="{% url 'Fin_List_Purchase_Add' %}" class="ml-1"></i><button type="button" class="btn btn-outline-secondary text-grey"><i class="fa fa-plus font-weight-light"></i> Bill</button></a>
           </div>
         </div>
       </div>
