--- a/Finsys/Finsys_App/templates/company/RET_INV/RET_INV_edit.html
+++ b/Finsys/Finsys_App/templates/company/RET_INV/RET_INV_edit.html
@@ -271,11 +271,10 @@ textarea::-webkit-scrollbar-thumb:hover {
                                 <td>
                                     <input type="hidden" name="id[]" value="{{itm.id}}">
                                     <input type="hidden" name="item_id[]" value="{{itm.Item.id}}" id="itemId{{forloop.counter}}">
-                                    <input type="text" name='hsn[]' id="hsn{{forloop.counter}}" value="{{itm.HSN}}" placeholder='HSN Code' class="form-control HSNCODE" style="background-color: #43596c; color: white;{% if not itm.HSN %}display:none;{% endif %}" readonly />
-                                    <input type="text" name='sac[]' id="sac{{forloop.counter}}" value="{{itm.SAC}}" placeholder='SAC Code' class="form-control SACCODE" style="background-color: #43596c; color: white;{% if not itm.SAC %}display:none;{% endif %}" readonly />
+                                    <input type="text" name='hsn[]' id="hsn{{forloop.counter}}" value="{{itm.HSN}}" placeholder='HSN Code' class="form-control HSNCODE" style="background-color: #43596c; color: white;" readonly />
                                 </td>
                                 <td >
-                                    <input type="number" name='qty[]' id="qty{{forloop.counter}}"  class="form-control qty mb-1" step=0 min=1 style="background-color: #43596c;margin-top: 21px; color: white;" value="{{itm.Quantity}}" onchange="changeItemQty(this.id,`{{itm.quantity}}`)" required/>
+                                    <input type="number" name='qty[]' id="qty{{forloop.counter}}"  class="form-control qty mb-1" step=0 min=1 style="background-color: #43596c;margin-top: 21px; color: white;" value="{{itm.Quantity}}" onchange="changeItemQty(this.id,`{{itm.Quantity}}`)" required/>
                                     <input type="text" id="avl{{forloop.counter}}" value={{itm.Item.current_stock}} style="display: none;">
                                     <div class="d-flex"><span>Available Qty :</span><span id="qtyspan{{forloop.counter}}" class=''>{{itm.Item.current_stock}}</span></div>
                                 </td>
@@ -985,15 +984,10 @@ textarea::-webkit-scrollbar-thumb:hover {
                                     </a>
                                 </div>
                             </div>
-                            <div class="col-md-6 mt-3" id="hsnDiv">
+                            <div class="col-md-6 mt-3">
                                 <label for="hsnField" style="color: white;">HSN Code</label>
                                 <input type="number" name="hsn" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid HSN code" required id="hsnField" oninput="validateHSN()">
                                 <div id="hsnError" style="color: red;"></div>
-                            </div>
-                            <div class="col-md-6 mt-3" id="sacDiv" style="display: none;">
-                                <label for="sacField" style="color: white;">SAC Code</label>
-                                <input type="number" name="sac" class="form-control" style="background-color: #2a4964; color: white;" placeholder="Enter a valid SAC code" id="sacField" oninput="validateSAC()">
-                                <div id="sacError" style="color: red;"></div>
                             </div>
                         </div>
                         <div class="row mt-3">
@@ -1795,10 +1789,9 @@ $(document).ready(function(){
                 <input type="hidden" name="id[]" value=0>
                 <input type="hidden" name="item_id[]" id="itemId${roinc}">
                 <input type="text" name='hsn[]' id="hsn${roinc}" placeholder='HSN Code' class="form-control HSNCODE" style="background-color: #43596c; color: white;" readonly />
-                <input type="text" name='sac[]' id="sac${roinc}" placeholder='SAC Code' class="form-control SACCODE" style="background-color: #43596c; color: white;display:none;" readonly />
             </td>
             <td >
-                <input type="number" name='qty[]' id="qty${roinc}"  class="form-control qty mb-1" step=0 min=1 style="background-color: #43596c;margin-top: 21px; color: white;" value=0 onchange="changeItemQty(this.id)" required/>
+                <input type="number" name='qty[]' id="qty${roinc}"  class="form-control qty mb-1" step=0 min=1 style="background-color: #43596c;margin-top: 21px; color: white;" value=0 onchange="changeItemQuantity(this.id)" required/>
                 <input type="text" id="avl${roinc}" style="display: none;">
                 <div class="d-flex"><span>Available Qty :</span><span id="qtyspan${roinc}" class=''></span></div>
             </td>
@@ -2119,8 +2112,6 @@ $(document).on("click","#saveitem",function(){
     var type = $("#itemType").val();
     var unit = $("#itemUnit").val();
     var hsn = $("#hsnField").val();
-    var sac = $("#sacField").val();
-    var hsn_or_sac;
     if($('#inclusive').prop('checked') || $('#check').prop('checked')){
         if($('#inclusive').prop('checked')){
             var tax = 'taxable'
@@ -2132,28 +2123,7 @@ $(document).on("click","#saveitem",function(){
         return
     }
 
-    if($('#itemType').val()=== 'Goods' )
-    {
-        
-        hsn_or_sac = hsn;
-        if(!validateHSN())
-        {
-            alert('HSN must contain at least 6 digits')
-            return
-        }
-    }
-    else 
-    {
-        
-        hsn_or_sac = sac;
-        if(!validateSAC())
-        {
-            alert('SAC must contain at least 6 digits')
-            return
-        }
-    }
-
-    if (name !="" && type !="" && unit != "" && tax != ""){
+    if (name !="" && type !="" && unit != "" && hsn != "" && tax != ""){
         $.ajax({
             type : 'POST',
             url:"{% url 'Fin_RETInvoiceItem' %}",
@@ -2162,7 +2132,6 @@ $(document).on("click","#saveitem",function(){
                 'type' : type,
                 'unit' : unit,
                 'hsn' : hsn,
-                'sac':sac,
                 'taxref' : tax,
                 'intra_st' : $("#intraStateTax").val(),
                 'inter_st' : $("#interStateTax").val(),
@@ -2316,21 +2285,9 @@ function getItemDetails(inpId, value) {
                 if (response.status) {
                     $('#' + inpId).val(value);
                     document.getElementById('itemId' + n).value = response.id;
-                    if( response.item_type ==='Goods')
-                        {
-                            $('#hsn'+n).show();
-                            $('#sac'+n).hide();
-                            $('#hsn'+n).val(response.hsn);
-                        }
-                        else
-                        {
-                            $('#sac'+n).show();
-                            $('#hsn'+n).hide();
-                            $('#sac'+n).val(response.sac);
-                        }
-                    // document.getElementById('iid' + n).value = response.id;
+                    document.getElementById('hsn' + n).value = response.hsn;
                     document.getElementById('qtyspan' + n).innerHTML = response.avl;
-                    document.getElementById('avl' + n).innerHTML = response.avl;
+                    document.getElementById('avl' + n).value = response.avl;
                     document.getElementById('price' + n).value = response.sales_rate;
                     calc();
                 }
@@ -2342,19 +2299,46 @@ function getItemDetails(inpId, value) {
 }
 
 
-    function changeItemQty(id){
+    
+    function changeItemQty(id,QTY){
         id_val = id.slice(3)
+        var crQty = parseInt(QTY)
         var qty = document.getElementById(id).value;
-        var avl_val = document.getElementById(`avl${id_val}`).innerText;
+        var avl_val = document.getElementById(`avl${id_val}`).value;
+        var diff = Math.abs(parseInt(qty) - crQty);
+        
     
         if( parseInt(qty) > parseInt(avl_val) ){
             alert("Quantity Greater than Available Quantity")
             document.getElementById(id).value = avl_val;
             calc()
         }else{
-            document.getElementById(`qtyspan${id_val}`).textContent = parseInt(avl_val) - parseInt(qty);
+            if(crQty < parseInt(qty)){
+                document.getElementById(`qtyspan${id_val}`).textContent = parseInt(avl_val) - diff;
+            }else{
+                document.getElementById(`qtyspan${id_val}`).textContent = parseInt(avl_val) + diff;
+            }
+            
         }
     }
+
+    function changeItemQuantity(id){
+        id_val = id.slice(3)
+        var qty = document.getElementById(id).value;
+        var avl_val = document.getElementById(`avl${id_val}`).value;
+        
+        console.log("Qty:", qty);
+        console.log("Available Quantity:", avl_val);
+
+        if( parseInt(qty) > parseInt(avl_val) ){
+            alert("Quantity Greater than Available Quantity")
+            document.getElementById(id).value = avl_val;
+            calc()
+        }else{
+            document.getElementById(`qtyspan${id_val}`).textContent = parseInt(avl_val) - parseInt(qty)
+        }
+    }
+
 
     $(document).ready(function(){
         $('#items-table-body').on('keyup change', function () {
@@ -2472,50 +2456,6 @@ function calc() {
 });
 
 
-</script>
-
-<script>
-    function validateSAC() {
-        var sacField = document.getElementById("sacField");
-        var errorText = document.getElementById("sacError");
-        var sacValue = sacField.value;
-
-        if (sacValue.length < 6) {
-            errorText.innerText = "SAC must contain at least 6 digits";
-            sacField.setCustomValidity("SAC must contain at least 6 digits");
-            sacField.style.borderColor = "red";
-            return false;
-        } else {
-            errorText.innerText = "";
-            sacField.setCustomValidity(""); 
-            sacField.style.borderColor = ""; 
-            return true;
-        }
-    }
-    $(document).ready(function(){
-        $('#itemType').on('input',function(){
-            if($(this).val()=== 'Goods' )
-            {
-                $('#sacField').val('');
-                $('#hsnField').prop('required',true);
-                $('#sacField').prop('required',false);
-                $('#hsnDiv').show();
-                $('#sacDiv').hide();
-                $('#sacError').text('');
-                $('#sacField').css({'border-color':'white'});
-            }
-            else
-            {
-                $('#hsnField').val('')
-                $('#hsnField').prop('required',false);
-                $('#sacField').prop('required',true);
-                $('#sacDiv').show();
-                $('#hsnDiv').hide();
-                $('#hsnError').text('');
-                $('#hsnField').css({'border-color':'white'});
-            }
-        })
-    })
 </script>
 
 {% endblock %}
